# eyrc-24-25-warehouse-drone

./: .gitignore  .gitmodules
swift_pico/src/: pico_controller.py
waypoint_navigation/: CMakeLists.txt  package.xml
waypoint_navigation/config/: waypoint_navigation_params.yaml
waypoint_navigation/launch/: waypoint_navigation_launch.py
waypoint_navigation/src/: waypoint_nav_node.cpp
waypoint_navigation/waypoint_navigation/: waypoint_nav_py_node.py
