<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>waypoint_navigation</name>
  <version>0.0.0</version>
  <description>DTU RoboClub package for EYantras 2024 competition Stage 2</description>
  <maintainer email="todo@todo.todo">Jonathan Mikler</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
<!-- This package was generated using the Turtle Nest ROS 2 package creator -->
